typescript_app: add v2 recordAuditedEmissionsToken endpoint
